# movies_chatbot

./: README.md  pyproject.toml
notebooks/: MoviesChatbot.ipynb
resources/: prompt.txt
resources/guardrails/config/: config.yml  prompts.yml
