[tool.poetry]
name = "movies-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
groq = "^0.5.0"
fastembed = { version = "^0.2.2", python = ">=3.11,<3.13" }
langchain = "^0.1.0"
langchain-groq = "^0.1.3"
python-dotenv = "^1.0.1"
nemoguardrails = "^0.9.0"
openai = "^1.30.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
